# VHoppAS

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  DEV_MANUAL.md  README.md  TECHNICAL_NOTES.md  USER_MANUAL.md  job_script.sh  main.cpp
.github/: release.yml
.github/workflows/: docs-to-pdf.yml
.github/workflows/scripts/: md-to-pdf.py
source/: Constants.hpp  CustomExceptions.cpp  CustomExceptions.hpp  GlobalFunctions.cpp  GlobalFunctions.hpp  TController.cpp  TController.hpp  TDOS.hpp  TElectron.cpp  TElectron.hpp  TEngine.cpp  TEngine.hpp  TEngineData.cpp  TEngineData.hpp  THistogram.cpp  THistogram.hpp  TLocalState.cpp  TLocalState.hpp  TParamSet.cpp  TParamSet.hpp  TPath.cpp  TPath.hpp  TPiecewiseLinearDOS.cpp  TPiecewiseLinearDOS.hpp  TResult.cpp  TResult.hpp
test/: DOS_01.txt  TestInput_01.txt  TestInput_02.txt  TestInput_03.txt  TestInput_04.txt  TestInput_05.txt  Test_01_Input_01.txt  Test_01_Input_02.txt  Test_02_Input_01.txt  Test_02_Input_02.txt  Test_03_Input.txt  Test_05_Input_01.txt  Test_05_Input_02.txt  Test_05_Input_03.txt  Test_06_Input_01.txt  Test_06_Input_02.txt
